--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@tanstack/react-query": "^5.89.0",
+    "bcrypt": "^6.0.0",
     "lucide-react": "^0.544.0",
+    "mongodb": "^6.19.0",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
-    "tanstack-query": "^1.0.0"
+    "tanstack-query": "^1.0.0",
+    "zod": "^4.1.9"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
