--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@strapi/blocks-react-renderer": "^1.0.2",
+    "@tailwindcss/typography": "^0.5.18",
     "@tanstack/react-query": "^5.89.0",
     "bcrypt": "^6.0.0",
     "lucide-react": "^0.544.0",
