--- a/package.json
+++ b/package.json
@@ -9,18 +9,22 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@react-pdf/renderer": "^4.3.1",
     "@strapi/blocks-react-renderer": "^1.0.2",
     "@tailwindcss/typography": "^0.5.18",
     "@tanstack/react-query": "^5.89.0",
     "bcrypt": "^6.0.0",
+    "framer-motion": "^12.23.22",
     "lucide-react": "^0.544.0",
     "mongodb": "^6.19.0",
     "next": "15.5.3",
     "next-auth": "^4.24.11",
+    "pdfjs-dist": "^5.4.149",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
+    "react-pdf": "^10.1.0",
     "tanstack-query": "^1.0.0",
     "zod": "^4.1.9"
   },
