--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
     "react-pdf": "^10.1.0",
+    "react-spinners": "^0.17.0",
     "tanstack-query": "^1.0.0",
     "zod": "^4.1.9"
   },
