--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "@tanstack/react-query": "^5.89.0",
     "bcrypt": "^6.0.0",
     "framer-motion": "^12.23.22",
+    "js-cookie": "^3.0.5",
+    "js-cookies": "^1.0.4",
     "lucide-react": "^0.544.0",
-    "mongodb": "^6.19.0",
     "next": "15.5.3",
-    "next-auth": "^4.24.11",
     "pdfjs-dist": "^5.4.149",
     "react": "19.1.0",
     "react-dom": "19.1.0",
