--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "js-cookies": "^1.0.4",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
+    "next-auth": "^4.24.11",
     "pdfjs-dist": "^5.4.149",
     "react": "19.1.0",
     "react-dom": "19.1.0",
