--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@strapi/blocks-react-renderer": "^1.0.2",
     "@tailwindcss/typography": "^0.5.18",
     "@tanstack/react-query": "^5.89.0",
+    "@tanstack/react-query-devtools": "^5.90.2",
     "bcrypt": "^6.0.0",
     "framer-motion": "^12.23.22",
     "js-cookie": "^3.0.5",
