--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@react-email/components": "^0.5.6",
+    "@react-email/render": "^1.3.2",
     "@react-pdf/renderer": "^4.3.1",
     "@strapi/blocks-react-renderer": "^1.0.2",
     "@tailwindcss/typography": "^0.5.18",
@@ -28,6 +30,7 @@
     "react-icons": "^5.5.0",
     "react-pdf": "^10.1.0",
     "react-spinners": "^0.17.0",
+    "resend": "^6.1.2",
     "tanstack-query": "^1.0.0",
     "zod": "^4.1.9"
   },
