--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "js-cookie": "^3.0.5",
     "js-cookies": "^1.0.4",
     "lucide-react": "^0.544.0",
-    "next": "15.5.3",
+    "next": "^15.5.7",
     "next-auth": "^4.24.11",
     "pdfjs-dist": "^5.4.149",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.1.2",
+    "react-dom": "^19.1.2",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
     "react-pdf": "^10.1.0",
