--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "js-cookie": "^3.0.5",
     "js-cookies": "^1.0.4",
     "lucide-react": "^0.544.0",
-    "next": "^15.5.7",
+    "next": "15.5.9",
     "next-auth": "^4.24.11",
     "pdfjs-dist": "^5.4.149",
     "react": "^19.1.2",
